<resources>
    <string name="app_name">Snapphoto</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="logo">logo</string>
    <string name="logging_in">Logging In</string>
    <string name="signing_up">Signing Up</string>
    <string name="email">e-mail</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>
    <string name="username">username</string>
    <string name="please_fill_all_fields">Please fill all fields.</string>
    <string name="passwords_are_different">Passwords are different.</string>
    <string name="search">Search</string>
    <string name="add_friends">Add Friends</string>
    <string name="stories">Stories</string>
    <string name="add_to_my_story">Add to My Story</string>
    <string name="selfie">Selfie</string>
    <string name="select_selfie">Select Selfie</string>
</resources>
