<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="viewmodel" type="com.example.snapphoto.ui.authentication.start.StartViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.authentication.start.StartFragment"
            android:background="@color/colorYellow">
        <ImageView
                android:src="@drawable/logo_white"
                android:contentDescription="@string/logo"
                android:layout_width="100dp"
                android:layout_height="100dp" android:id="@+id/imageView" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"/>
        <Button
                android:id="@+id/logInButton"
                android:text="@string/log_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewmodel.logInButtonClicked()}"
                android:textColor="@android:color/black"
                android:backgroundTint="@android:color/white"
                app:rippleColor="@color/colorLightGray"
                style="@style/SnapPhotoButtonTheme"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/signUpButton"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintBaseline_toBaselineOf="@+id/signUpButton"/>
        <Button
                android:id="@+id/signUpButton"
                android:text="@string/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewmodel.signUpButtonClicked()}"
                android:backgroundTint="@color/colorBlue"
                android:textColor="@android:color/white"
                app:rippleColor="@color/colorBlueDark"
                style="@style/SnapPhotoButtonTheme"
                app:layout_constraintStart_toEndOf="@+id/logInButton" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="16dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>